2019-02-17  Marek Polacek  <polacek@redhat.com>

	PR c++/89217 - ICE with list-initialization in range-based for loop.
	* g++.dg/cpp0x/range-for37.C: New test.

	* g++.old-deja/g++.robertl/eb82.C: Tweak dg-error.

	PR c++/89315
	* g++.dg/cpp0x/initlist114.C: New test.

2019-02-16  David Malcolm  <dmalcolm@redhat.com>

	PR c++/88680
	* g++.dg/wrappers/pr88680.C: New test.

2019-02-17  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/71066
	* gfortran.dg/coarray_data_1.f90: New test.

2019-02-16  Eric Botcazou  <ebotcazou@adacore.com>

	* c-c++-common/patchable_function_entry-decl.c: Add -fno-pie on SPARC.
	* c-c++-common/patchable_function_entry-default.c: Likewise.
	* c-c++-common/patchable_function_entry-definition.c: Likewise.

2019-02-16  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/66152
	* gcc.target/i386/pr66152.c: New test.

2019-02-15  Eric Botcazou  <ebotcazou@adacore.com>

	* g++.dg/asan/asan_oob_test.cc: Skip OOB_int on SPARC.
	* g++.dg/asan/function-argument-3.C: Tweak for 32-bit SPARC.

2019-02-15  Tamar Christina  <tamar.christina@arm.com>

	* lib/target-supports.exp
	(check_effective_target_arm_neon_softfp_fp16_ok_nocache): Drop non-fpu
	checking alternative.

2019-02-15  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.target/sparc/struct-ret-check-1.c: Add -fno-pie option.

2019-02-15  Eric Botcazou  <ebotcazou@adacore.com>

	* c-c++-common/patchable_function_entry-decl.c: Do not run on Visium.
	* c-c++-common/patchable_function_entry-default.c: Likewise.
	* c-c++-common/patchable_function_entry-definition.c: Likewise.
	* gcc.dg/tree-ssa/pr84859.c: Add -ftree-cselim switch.

2019-02-15  Jakub Jelinek  <jakub@redhat.com>

	PR other/69006
	PR testsuite/88920
	* lib/gcc-dg.exp: If llvm_binutils effective target, set
	allow_blank_lines to 2 during initialization.
	(dg-allow-blank-lines-in-output): Set allow_blank_lines to 1 only if
	it was previously zero.
	(gcc-dg-prune): Don't check for llvm_binutils effective target here.